Thu Jun 12 15:17:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/TransportCurrent/lib/Client_Request_Interceptor.cpp:
        * tests/TransportCurrent/lib/Server_Request_Interceptor.cpp:
        * tests/Default_Servant2/File_i.cpp:
        * tests/POA/Bug_2511_Regression/server.cpp:
        * tests/POA/Excessive_Object_Deactivations/Excessive_Object_Deactivations.cpp:
        * tests/POA/Etherealization/Etherealization.cpp:
        * tests/POA/Explicit_Activation/server.cpp:
        * tests/POA/DSI/client.cpp:
        * tests/POA/Adapter_Activator/server.cpp:

          Wide character build disambiguate ORB_init () calls.

Thu Jun 12 13:04:43 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/ImplRepo_Service/Locator_Options.cpp:

          Added another cast to disambiguate the msec() call.

Thu Jun 12 12:31:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * TAO_IDL/driver/drv_mcpp_preproc.cpp:

          Mangled yesterdays conversion, missing a ) and changed const
          instead of char to ACE_TCHAR. Corrected these mistakes.

Wed Jun 11 20:50:15 UTC 2008  Chris Cleeland  <cleeland@ociweb.com>

        * tests/ORB_Local_Config/Bug_3049/a.conf:

          Committing this for Phil Mesnier, who was having problems with
          subversion and this file for some reason.

Wed Jun 11 19:07:03 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * tao/Profile_Transport_Resolver.cpp:

          After connecting a transport, determine if flushing needs to take
          place and indicate it to the transport via a flag.

        * tao/Transport.h:
        * tao/Transport.inl:

          Added a flag and mutator to determine if flushing needs to occur
          after opening a transport.

        * tao/Transport.cpp:

          Schedule flushing if indicated by the transport resolver.

        * tests/Oneway_Timeouts/run_test.pl:

          Adjust the delay sync time for the above change.
