@@ -11,15 +11,16 @@ use lib "$ENV{ACE_ROOT}/bin";
 use PerlACE::Run_Test;
 use PerlACE::TestTarget;
 
-my $target = PerlACE::TestTarget::create_target($PerlACE::TestConfig) || die "Create target failed\n";
-my $host = new PerlACE::TestTarget;
+my $target = PerlACE::TestTarget::create_target("server") || die "Create target failed\n";
+my $host = PerlACE::TestTarget::create_target("client") || die "Create client failed\n";
 
 # File used to pass AMH server ior to its clients.
 # This file name is hard-coded in the server.cpp and client.cpp files
 $iorbase = "test.ior";
-$iorfile = $target->LocalFile("$iorbase");
-$target->DeleteFile($iorfile);
-$host->DeleteFile($iorbase);
+$server_iorfile = $target->LocalFile("$iorbase");
+$host_iorfile = $host->LocalFile("$iorbase");
+$target->DeleteFile($server_iorfile);
+$host->DeleteFile($host_iorfile);
 
 if (PerlACE::is_vxworks_test()) {
     $AMH = new PerlACE::ProcessVX ("server", "");
@@ -33,21 +34,27 @@ $CL = $host->CreateProcess ("client", "");
 # Run the AMH server.
 $AMH->Spawn ();
 
-if ($target->WaitForFileTimed ($iorfile, $PerlACE::wait_interval_for_process_creation) == -1) {
+if ($target->WaitForFileTimed ($server_iorfile,
+                               $target->ProcessStartWaitInterval()) == -1) {
     print STDERR "ERROR: File containing AMH Server ior,".
-        " <$iorfile>, cannot be found\n";
+        " <$server_iorfile>, cannot be found\n";
     $AMH->Kill ();
     exit 1;
 }
 
-if ($target->GetFile ($iorfile, $iorbase) == -1) {
-    print STDERR "ERROR: cannot retrieve file <$iorfile>\n";
+if ($target->GetFile ($server_iorfile, $iorbase) == -1) {
+    print STDERR "ERROR: cannot retrieve file <$server_iorfile>\n";
+    $AMH->Kill (); $AMH->TimedWait (1);
+    exit 1;
+} 
+if ($host->PutFile ($iorbase, $host_iorfile) == -1) {
+    print STDERR "ERROR: cannot set file <$host_iorfile>\n";
     $AMH->Kill (); $AMH->TimedWait (1);
     exit 1;
 } 
 
 # Run client.
-$client = $CL->SpawnWaitKill (30);
+$client_status = $CL->SpawnWaitKill (30);
 
 # Clean up.
 $amhserver= $AMH->WaitKill (15);
@@ -58,6 +65,6 @@ if ($amhserver != 0) {
 }
 
 $target->GetStderrLog();
-$host->DeleteFile($iorbase);
-$target->DeleteFile ($iorfile);
+$host->DeleteFile($host_iorfile);
+$target->DeleteFile ($server_iorfile);
 exit $status;
